# globcmp

./: Cargo.toml  README.md
.github/workflows/: ci.yml
globcmp-cli/: main.rs
globcmp-lib/: Cargo.toml  README.md
globcmp-lib/src/: lib.rs
pyglobcmp/: Cargo.toml  pyproject.toml
pyglobcmp/src/: lib.rs
