[package]
name = "globcmp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "globcmp"
path = "globcmp-cli/main.rs"

[workspace]
members = [ "globcmp-lib" ]

[dependencies]
clap = { version = "4.5.*", default-features = false, features = ["std", "help", "usage", "error-context", "suggestions", "derive"] }
globcmp-lib = { version = "0.1.0", path = "globcmp-lib" }
