[package]
name = "globcmp"
version = "0.3.0"
authors = ["Gábor Nyéki <gn@gabornyeki.com>"]
description = """
globcmp assesses whether one glob pattern matches a file path more closely than another glob pattern does.
"""
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/gn0/globcmp"
repository = "https://github.com/gn0/globcmp"
keywords = [
    "glob", "glob-pattern", "pattern-matching", "path-matching",
    "filesystem-path"
]
categories = ["filesystem"]
edition = "2024"

[[bin]]
name = "globcmp"
path = "globcmp-cli/main.rs"

[workspace]
members = [ "globcmp-lib", "pyglobcmp" ]

[features]
stack-safe = [ "globcmp-lib/stack-safe" ]

[dependencies]
clap = { version = "4.5.*", default-features = false, features = ["std", "help", "usage", "error-context", "suggestions", "derive"] }
globcmp-lib = { version = "0.3.0", path = "globcmp-lib" }
