[package]
name = "globcmp-lib"
version = "0.3.0"
authors = ["Gábor Nyéki <gn@gabornyeki.com>"]
description = """
Library used by the globcmp crate.
Provides methods to assess whether one glob pattern matches a file path more closely than another glob pattern does.
"""
license = "LGPL-3.0-only"
documentation = "https://docs.rs/globcmp-lib"
homepage = "https://github.com/gn0/globcmp/tree/main/globcmp-lib"
repository = "https://github.com/gn0/globcmp/tree/main/globcmp-lib"
keywords = [
    "glob", "glob-pattern", "pattern-matching", "path-matching",
    "filesystem-path"
]
categories = ["filesystem"]
edition = "2024"

[lib]
path = "src/lib.rs"

[features]
stack-safe = ["dep:stacker"]

[dependencies]
multipeek = "0.1.2"
stacker = { version = "0.1.21", optional = true }
