[package]
name = "pyglobcmp"
version = "0.3.0"
authors = ["Gábor Nyéki <gn@gabornyeki.com>"]
description = """
Assess whether a file path is matched more closely by one glob pattern than another.
This package contains Python bindings to the globcmp-lib Rust crate.
"""
license = "LGPL-3.0-only"
documentation = "https://docs.rs/globcmp-lib"
homepage = "https://github.com/gn0/globcmp/tree/main/pyglobcmp"
repository = "https://github.com/gn0/globcmp/tree/main/pyglobcmp"
keywords = [
    "glob", "glob-pattern", "pattern-matching", "path-matching",
    "filesystem-path"
]
categories = ["filesystem"]
edition = "2024"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
stack-safe = ["globcmp-lib/stack-safe"]

[dependencies]
globcmp-lib = { version = "0.3.0", path = "../globcmp-lib" }
pyo3 = { version = "0.26.0", features = ["extension-module", "abi3-py38"] }
